--- a/p3/index.html
+++ b/p3/index.html
@@ -10,122 +10,17 @@
 </head>
 
 <body>
-    <a href="../index.html"><button>O</button></a>
-
-    <svg class="bigfish" viewBox="0 0 149 274" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g filter="url(#filter0_f_24_62)">
-            <path
-                d="M104.449 85.04C123.614 112.76 101.922 144.841 88.6799 157.416C68.5271 118.052 67.0308 39.2312 68.8018 4.74121C72.6985 19.9575 85.2834 57.32 104.449 85.04Z"
-                fill="url(#paint0_linear_24_62)" />
-            <path
-                d="M104.449 85.04C123.614 112.76 101.922 144.841 88.6799 157.416C68.5271 118.052 67.0308 39.2312 68.8018 4.74121C72.6985 19.9575 85.2834 57.32 104.449 85.04Z"
-                stroke="#F7893A" />
-        </g>
-        <g filter="url(#filter1_f_24_62)">
-            <path
-                d="M94.5485 151.288C105.125 131.908 125.205 87.3764 108.014 70.6426C120.907 83.193 140.996 86.6277 94.5485 151.288Z"
-                fill="url(#paint1_linear_24_62)" />
-        </g>
-        <g filter="url(#filter2_f_24_62)">
-            <path
-                d="M96.458 164.977C80.7027 131.177 48.6464 55.3445 60.8809 37.5789C51.705 50.9031 32.9386 47.3659 96.458 164.977Z"
-                fill="url(#paint2_linear_24_62)" />
-        </g>
-        <g filter="url(#filter3_f_24_62)">
-            <path
-                d="M13.0909 207.281C3.73358 243.23 25.1544 248.185 47.9968 257.977C70.8393 267.769 92.079 255.563 106.97 220.826C121.862 186.088 113.823 143.384 90.9807 133.592C68.1382 123.8 27.9822 172.543 13.0909 207.281Z"
-                fill="url(#paint3_linear_24_62)" />
-        </g>
-        <g filter="url(#filter4_f_24_62)">
-            <circle cx="6.5" cy="6.5" r="6.5" transform="matrix(-0.385171 0.922845 0.922845 0.385171 13.0073 228)"
-                fill="#2A1717" />
-        </g>
-        <g filter="url(#filter5_f_24_62)">
-            <circle cx="6.5" cy="6.5" r="6.5" transform="matrix(-0.385171 0.922845 0.922845 0.385171 72.8428 249.475)"
-                fill="#2A1717" />
-        </g>
-        <g filter="url(#filter6_f_24_62)">
-            <path
-                d="M129.641 195.915C124.042 205.973 110.977 226.193 103.515 226.609C96.0531 227.024 117.823 206.319 129.641 195.915Z"
-                fill="#F8791D" />
-        </g>
-        <g filter="url(#filter7_f_24_62)">
-            <path
-                d="M26.7726 158C22.7772 168.796 15.9214 191.873 20.4606 197.81C24.9998 203.747 26.5599 173.744 26.7726 158Z"
-                fill="#F8791D" />
-        </g>
-        <defs>
-            <filter id="filter0_f_24_62" x="64.2517" y="0.741211" width="51.7693" height="160.675"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="2" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter1_f_24_62" x="90.5486" y="66.6426" width="37.053" height="88.6459"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="2" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter2_f_24_62" x="47.0242" y="33.5789" width="53.4338" height="135.398"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="2" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter3_f_24_62" x="4.84106" y="126.318" width="115.688" height="140.923"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter4_f_24_62" x="7.00049" y="227" width="19.0034" height="19.0034"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="1.5" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter5_f_24_62" x="66.8359" y="248.475" width="19.0034" height="19.0034"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="1.5" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter6_f_24_62" x="97.9922" y="191.915" width="35.6492" height="38.6998"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="2" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <filter id="filter7_f_24_62" x="14.9631" y="154" width="15.8093" height="48.5768"
-                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                <feGaussianBlur stdDeviation="2" result="effect1_foregroundBlur_24_62" />
-            </filter>
-            <linearGradient id="paint0_linear_24_62" x1="39.0929" y1="28.4844" x2="121.3" y2="131.346"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="#FA9449" />
-                <stop offset="1" stop-color="#F76D09" />
-            </linearGradient>
-            <linearGradient id="paint1_linear_24_62" x1="119.008" y1="75.9711" x2="84.7957" y2="146.562"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="#FA9449" />
-                <stop offset="1" stop-color="#F76D09" />
-            </linearGradient>
-            <linearGradient id="paint2_linear_24_62" x1="51.5665" y1="40.8413" x2="95.2006" y2="165.417"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="#FA9449" />
-                <stop offset="1" stop-color="#F76D09" />
-            </linearGradient>
-            <linearGradient id="paint3_linear_24_62" x1="97.0264" y1="136.181" x2="45.2622" y2="256.934"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="#FA9449" />
-                <stop offset="1" stop-color="#F56903" />
-            </linearGradient>
-        </defs>
-    </svg>
-    <span class="circle"></div>
+    <div id="clock">
+        <div id="hour" class="hand">
+            <img src="../image/bigfish.png" class="bigfish" alt="hourhand">
+        </div>
+        <div id="minute" class="hand"></div>
+        <div id="second" class="hand">
+            <h1>O</h1>
+        </div>
+    </div>
+    <!-- <a href="../index.html"><button>O</button></a> -->
+    <script src="script.js"></script>
 </body>
 
 </html>
