--- a/p3/index.html
+++ b/p3/index.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fishy clock</title>
-    <link rel="icon" type="image/x-icon" href="../image/bigfish.png">
+    <link rel="icon" type="image/x-icon" href="../image/fishicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="clock">
+        <div class="medium-circle"></div>
+        <div class="small-circle"></div>
         <div id="hour" class="hand">
-            <img src="../image/bigfish.png" class="bigfish" alt="hourhand">
+            <img src="../image/bigfish2.png" class="bigfish" alt="hourhand">
         </div>
-        <div id="minute" class="hand"></div>
-        <div id="second" class="hand">
+        <div id="minute" class="hand">
+            <img src="../image/smallfish2.png" class="smallfish" alt="minutehand">
+        </div>
+        <!-- <div id="second" class="hand">
             <h1>O</h1>
-        </div>
+        </div> -->
     </div>
     <!-- <a href="../index.html"><button>O</button></a> -->
     <script src="script.js"></script>
