--- a/p3/index.html
+++ b/p3/index.html
@@ -12,7 +12,9 @@
 <body>
     <div id="clock">
         <div class="medium-circle"></div>
-        <div class="small-circle"></div>
+        <a href="../index.html">
+            <div class="small-circle"></div>
+        </a>
         <div id="hour" class="hand">
             <img src="../image/bigfish2.png" class="bigfish" alt="hourhand">
         </div>
