--- a/p3/index.html
+++ b/p3/index.html
@@ -26,6 +26,7 @@
         </div> -->
     </div>
     <!-- <a href="../index.html"><button>O</button></a> -->
+    <audio id="myAudio" src="../music/sillytunes.mp3"></audio>
     <script src="script.js"></script>
 </body>
 
